--- a/public/index-prod.html
+++ b/public/index-prod.html
@@ -9,7 +9,7 @@
     <title>GGbeng</title>
     <link rel="stylesheet" href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
-    <link rel="stylesheet" href="https://unpkg.com/muse-ui@3.0.1/dist/muse-ui.css">
+    <link rel="stylesheet" href="https://www.ggbeng.xyz/mouse/mouse.css">
     <style type="text/css">
     html {
         height: 100%;
@@ -33,7 +33,7 @@
     <script src="https://cdn.bootcss.com/vue/2.5.17/vue.min.js"></script>
     <script src="https://cdn.bootcss.com/vuex/3.0.1/vuex.min.js"></script>
     <script src="https://cdn.bootcss.com/vue-router/3.0.1/vue-router.min.js"></script>
-    <script src="https://unpkg.com/muse-ui@3.0.1/dist/muse-ui.js"></script>
+    <script src="https://www.ggbeng.xyz/mouse/mouse.js"></script>
     <script src='https://cdn.bootcss.com/three.js/r83/three.js'></script>
 </body>
 
