--- a/public/index-prod.html
+++ b/public/index-prod.html
@@ -34,7 +34,7 @@
     <script src="https://cdn.bootcss.com/vuex/3.0.1/vuex.min.js"></script>
     <script src="https://cdn.bootcss.com/vue-router/3.0.1/vue-router.min.js"></script>
     <script src="https://www.ggbeng.xyz/mouse/mouse.js"></script>
-    <script src='https://cdn.bootcss.com/three.js/r83/three.js'></script>
+    <script src="https://cdn.bootcss.com/three.js/r83/three.min.js"></script>
 </body>
 
 </html>
