--- a/public/index-prod.html
+++ b/public/index-prod.html
@@ -1,40 +1,44 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>g.ico">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>g.ico" />
     <title>GGbeng</title>
-    <link rel="stylesheet" href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
-    <link rel="stylesheet" href="https://www.ggbeng.xyz/mouse/mouse.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic"
+    />
+    <link rel="stylesheet" href="http://118.24.254.100/mouse/mouse.css" />
     <style type="text/css">
-    html {
+      html {
         height: 100%;
-    }
+      }
 
-    body {
+      body {
         height: 100%;
         margin: 0;
         padding: 0;
-    }
+      }
 
-    .mu-linear-progress {
+      .mu-linear-progress {
         position: absolute !important;
-    }
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <p id="app"></p>
     <!-- built files will be auto injected -->
     <script src="https://cdn.bootcss.com/vue/2.5.17/vue.min.js"></script>
     <script src="https://cdn.bootcss.com/vuex/3.0.1/vuex.min.js"></script>
     <script src="https://cdn.bootcss.com/vue-router/3.0.1/vue-router.min.js"></script>
-    <script src="https://www.ggbeng.xyz/mouse/mouse.js"></script>
+    <script src="http://118.24.254.100/mouse/mouse.js"></script>
     <script src="https://cdn.bootcss.com/three.js/r83/three.min.js"></script>
-</body>
-
+  </body>
 </html>
