更新域名地址

--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="stylesheet" href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.css">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>g.ico" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic"
+    />
     <title>ggbeng</title>
-		<style>
-			html {
-				height: 100%;
-			}
-			body {
-				height: 100%;
-				margin: 0;
-				padding: 0;
-			}
+    <style>
+      html {
+        height: 100%;
+      }
+      body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
       .mu-linear-progress {
         position: absolute !important;
       }
-		</style>
+    </style>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but ggbeng doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong
+        >We're sorry but ggbeng doesn't work properly without JavaScript
+        enabled. Please enable it to continue.</strong
+      >
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
