--- a/public/index-prod.html
+++ b/public/index-prod.html
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>g.ico" />
     <title>GGbeng</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic"
-    />
-    <link rel="stylesheet" href="http://118.24.254.100/mouse/mouse.css" />
+    <link rel="stylesheet" href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" />
+    <link rel="stylesheet" href="http://119.3.251.24/mouse/mouse.css" />
+    <script src="https://cdn.bootcss.com/vue/2.5.17/vue.min.js"></script>
+    <script src="https://cdn.bootcss.com/vuex/3.0.1/vuex.min.js"></script>
+    <script src="https://cdn.bootcss.com/vue-router/3.0.1/vue-router.min.js"></script>
+    <script src="http://119.3.251.24/mouse/mouse.js"></script>
+    <script src="https://cdn.bootcss.com/three.js/r83/three.min.js"></script>
     <style type="text/css">
       html {
         height: 100%;
@@ -35,10 +34,5 @@
   <body>
     <p id="app"></p>
     <!-- built files will be auto injected -->
-    <script src="https://cdn.bootcss.com/vue/2.5.17/vue.min.js"></script>
-    <script src="https://cdn.bootcss.com/vuex/3.0.1/vuex.min.js"></script>
-    <script src="https://cdn.bootcss.com/vue-router/3.0.1/vue-router.min.js"></script>
-    <script src="http://118.24.254.100/mouse/mouse.js"></script>
-    <script src="https://cdn.bootcss.com/three.js/r83/three.min.js"></script>
   </body>
 </html>
